@@ -244,7 +244,6 @@ typedef struct {
 #define ACTION_FORWARD 14
 #define ACTION_NOTHING 15
 
-char *help_path_build(char *buffer, char *file, char *lastfile, history_blk *stack);
 bool parse_body(BULP *bptr,char **display, char **links, int *link_no, int *block_no, bool block_change, int *table_info, list_blk *list_info, char *err_message);
 bool history_add(history_blk *stack, char *file, int line_no);
 bool go_to_link(link_blk *link_dat,char *filename,char *mark, history_blk *history, u32b *passback);
