@@ -21,6 +21,7 @@ void tolua_tolua_close (lua_State* tolua_S);
 /* function to register type */
 static void toluaI_reg_types (lua_State* tolua_S)
 {
+	(void)tolua_S;
 }
 
 /* function: tolua_using */
