@@ -3,7 +3,7 @@
 ** Written by Waldemar Celes
 ** TeCGraf/PUC-Rio
 ** Jul 1998
-** $Id: tolua_tm.c,v 1.1 2002/02/11 19:14:50 takkaria Exp $
+** $Id: tolua_tm.c,v 1.2 2002/06/12 19:13:39 takkaria Exp $
 */
 
 /* This code is free software; you can redistribute it and/or modify it. 
@@ -40,7 +40,7 @@
 /* internal function prototype */
 static void setmethods (lua_State* L);
 
-static void settag (lua_State* L, int lo, char* tag_registry_field)
+static void settag (lua_State* L, int lo, const char* tag_registry_field)
 {
  toluaI_getregistry(L,tag_registry_field);
  lua_pushvalue(L,lo);
@@ -63,7 +63,7 @@ void toluaI_tm_setclass (lua_State* L, int lo)
  settag(L,lo,"tolua_tag_class");
 }
 
-void toluaI_tm_class (lua_State* L, int lo, char* name)
+void toluaI_tm_class (lua_State* L, int lo, const char* name)
 {
  int tag_class;
  int tag = lua_newtag(L);
@@ -172,7 +172,7 @@ void toluaI_tm_pushclass (lua_State* L, int lo)
  lua_pop(L,1);
 }
 
-int toluaI_gettag (lua_State* L, char* tagname)
+int toluaI_gettag (lua_State* L, const char* tagname)
 {
  int tag;
  toluaI_getregistry(L,tagname);
