@@ -3,7 +3,7 @@
 ** Written by Waldemar Celes
 ** TeCGraf/PUC-Rio
 ** Jul 1998
-** $Id: tolua_tt.c,v 1.1 2002/02/11 19:14:55 takkaria Exp $
+** $Id: tolua_tt.c,v 1.2 2002/06/12 19:13:39 takkaria Exp $
 */
 
 /* This code is free software; you can redistribute it and/or modify it. 
@@ -58,7 +58,7 @@ const char* toluaI_tt_getobjtype (lua_State* L, int lo)
   return gettype(L,lua_tag(L,lo));
 }
 
-int toluaI_tt_gettag (lua_State* L, char* type)
+int toluaI_tt_gettag (lua_State* L, const char* type)
 {
  int tag;
  toluaI_getregistry(L,"tolua_tbl_itag");
@@ -159,7 +159,7 @@ void toluaI_tt_init (lua_State* L)
 }
 
 
-void toluaI_tt_register (lua_State* L, int tag, char* type)
+void toluaI_tt_register (lua_State* L, int tag, const char* type)
 {
  toluaI_getregistry(L,"tolua_tbl_itype");
  lua_pushnumber(L,tag);
@@ -175,7 +175,7 @@ void toluaI_tt_register (lua_State* L, int tag, char* type)
 }
 
 
-void toluaI_tt_class (lua_State* L, int lo, char* derived, char* base)
+void toluaI_tt_class (lua_State* L, int lo, const char* derived, const char* base)
 {
  char* cderived = toluaI_tt_concat("const ",derived);
  int tag = toluaI_tt_gettag(L,derived);
@@ -208,7 +208,7 @@ char* toluaI_tt_concat (const char* s1, const char* s2)
  return strcat(strcpy(s,s1),s2);
 }
 
-void tolua_usertype (lua_State* L, char* type)
+void tolua_usertype (lua_State* L, const char* type)
 {
  /* check if type is already registered */
  toluaI_getregistry(L,"tolua_tbl_itag");
@@ -249,7 +249,7 @@ int toluaI_tt_isusertype (lua_State* L, int lo)
 }
 
 #if 0
-void tolua_settag (lua_State* L, char* type, int* tag)
+void tolua_settag (lua_State* L, const char* type, int* tag)
 {
  toluaI_getregistry(L,"tolua_tbl_itag");
  lua_pushstring(L,type);
