@@ -3,7 +3,7 @@
 ** Written by Waldemar Celes
 ** TeCGraf/PUC-Rio
 ** Jul 1998
-** $Id: tolua_tt.h,v 1.1 2002/02/11 19:15:03 takkaria Exp $
+** $Id: tolua_tt.h,v 1.2 2002/06/12 19:13:39 takkaria Exp $
 */
 
 /* This code is free software; you can redistribute it and/or modify it.
@@ -17,11 +17,11 @@
 #define tolua_tt_h
 
 void  toluaI_tt_init (lua_State* L);
-void  toluaI_tt_register (lua_State* L, int tag, char* type);
-void  toluaI_tt_class (lua_State* L, int lo, char* derived, char* base);
+void  toluaI_tt_register (lua_State* L, int tag, const char* type);
+void  toluaI_tt_class (lua_State* L, int lo, const char* derived, const char* base);
 void  toluaI_tt_sethierarchy (lua_State* L, int tag, int btag);
 int   toluaI_tt_isusertype (lua_State* L, int lo);
-int   toluaI_tt_gettag (lua_State* L, char* type);
+int   toluaI_tt_gettag (lua_State* L, const char* type);
 const char* toluaI_tt_getobjtype (lua_State* L, int lo);
 char* toluaI_tt_concat (const char* s1, const char* s2);
 
